Update ag-grid, fix table to wrap text

--- a/app/index.scss
+++ b/app/index.scss
@@ -56,3 +56,7 @@ html body {
 .MuiTooltip-popper {
   top: -$navbar-size !important;
 }
+
+.ag-cell-wrap-text {
+  word-break: break-word !important;
+}
